--- a/style.css
+++ b/style.css
@@ -140,3 +140,15 @@ footer p {
   justify-content: center;
   gap: 3px;
 }
+
+/*Midia queries */
+
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+
+  .light {
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
+}
